--- a/graph.css
+++ b/graph.css
@@ -2,21 +2,23 @@ body {
     display: inline-block; 
     justify-content: center; 
     align-items: center; 
-    min-height: 100vh; 
+    min-height: 76vh; 
     margin: 0; 
     font-family: Arial, sans-serif; 
     background-color: #f4f4f9; 
 } 
 
 canvas { 
+    height: 50vh; 
     display: flex; 
-    width: 85vw; 
+    width: 90w; 
     margin: 0 auto; 
     justify-content: center; 
     height: 90vh; } 
 chart-container 
 { 
-    width: 90vw; 
+    height: 45vh; 
+    width: 75vw; 
     max-width: 95vw; 
     margin: 0 auto; 
     background: #fff; 
